img/OL-TPE/istio-morder-ol-tpe/ol-gw.yaml
#*YAML命名規則:${環境代碼}-${對應 K8s API資源縮寫 (shortnames) }-${模組名稱|系統功能}-${opt 用途}
#*metadata 命名規則：${對應 K8s API資源縮寫 (shortnames)}-${模組名稱|系統功能|NameSpace}-${opt 用途|敘述}
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: gw-morder-ol-tpe
  namespace: istio-morder-ol-tpe
spec:
  selector:
    istio: morder-ol-tpe-ingressgateway # use istio default ingress gateway
  servers:
  - port:
      number: 8050
      name: http
      protocol: HTTP
    hosts:
    - morder-ol-tpe/* #  host可帶入 ${GKE_namespace}/${domain_name}  
  - port:
      #httpsRedirect: true # sends 301 redirect for http requests  - port:
      number: 8051
      name: https
      protocol: HTTPS
    hosts:
    - morder-ol-tpe/* #  host可帶入 ${GKE_namespace}/${domain_name}
    tls:
      mode: SIMPLE
      credentialName: morder-ol-credential # 對應secret name，可參考Secure Gateways: https://istio.io/latest/docs/tasks/traffic-management/ingress/secure-ingress/#configure-a-tls-ingress-gateway-for-multiple-hosts 先建立 private cert進行檢驗
